--- a/1/main.css
+++ b/1/main.css
@@ -1,18 +1,26 @@
 
 body {
- background-color: rgb(94, 190, 182);
+ background-color: rgb(70, 179, 164);
  
 }
 
 h1{
+    font-family: Georgia, sans-serif;
+    font-size: 40px;
     text-align: left;
 }
 p{
+    font-family: Georgia, Times, serif;
+    font-size: 15px;
     text-align: left;
 }
 h2{
+    font-family: Georgia, Times, serif;
+    font-size: 25px;
     text-align: left;
 }
 h3{
+    font-family: Georgia, Times, serif;
+    font-size: 20px;
     text-align: left;
 }
