--- a/1/oblig1/oppgave4/oppgave4.css
+++ b/1/oblig1/oppgave4/oppgave4.css
@@ -3,3 +3,14 @@ h1{
     font-size: 50px;
     text-align: center;
 }
+p{
+    font-family: Georgia, Times, serif;
+    font-size: 15px;
+    text-align: left;
+    text-align: center;
+}
+Header{
+    background-color: rgb(50, 144, 173);
+   padding: 20px;
+   text-align: center;
+}
