Alot off CSS changes

--- a/1/main.css
+++ b/1/main.css
@@ -1,17 +1,13 @@
-
 body {
- background-color: rgb(70, 179, 164);
- margin: 0;
-}
-#header {
-    background-color: #f1f1f1;
-    padding: 20px;
-    
+    margin: 0;
+    background-color: #f2f2f2;
   }
+
 h1{
     font-family: Georgia, sans-serif;
     font-size: 40px;
     text-align: center;
+    color: #f2f2f2;
 }
 p{
     font-family: Georgia, Times, serif;
@@ -28,3 +24,56 @@ h3{
     font-size: 20px;
     text-align: left;
 }
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0;
+    background-color: h;
+  }
+  
+  /* Style the header */
+  .header {
+    background-color: #333;
+    padding: 1px;
+    text-align: center;
+
+   
+   
+  }
+  
+  /* Style the top navigation bar */
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  /* Style the topnav links */
+  .topnav a {
+    float: center;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change color on hover */
+  .topnav a:hover {
+    background-color: #f2f2f2;
+    color: black;
+  }
+  .footer {
+    background-color: #333;
+    padding: 5px 8px;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    }
+ #sebastianhauglid {
+text-align: center;
+font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+color: #f2f2f2;
+ }
+  
