--- a/1/oblig1/Experimental/Experimental.css
+++ b/1/oblig1/Experimental/Experimental.css
@@ -1,39 +1,52 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
-  /* Style the header */
-  .header {
-    background-color: #333;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  /* Style the top navigation bar */
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  /* Style the topnav links */
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Change color on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  h1{
-      color: #ddd;
-  }
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  background-color: #f2f2f2;
+}
+
+
+.header {
+  background-color: #333;
+  padding: 0px;
+  text-align: center;
+}
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float:right; 
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+h1{
+    color: #ddd;
+}
+.footer {
+background-color: #333;
+padding: 14px 16px;
+position: fixed;
+bottom: 0px;
+width: 100%;
+}
+.footer {
+  overflow: hidden;
+  background-color: #333;
+}
+.footer {
+
+}
