--- a/1/main.css
+++ b/1/main.css
@@ -45,13 +45,16 @@ h3{
   
   /* Style the top navigation bar */
   .topnav {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
     overflow: hidden;
     background-color: #333;
   }
   
   /* Style the topnav links */
   .topnav a {
-    float: center;
+    float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
