--- a/1/main.css
+++ b/1/main.css
@@ -76,6 +76,7 @@ h3{
     }
     #content {
       padding-bottom: 50px;
+      padding-top: 20px;
 
       display: flex;
       align-content: center;
@@ -89,4 +90,10 @@ text-align: center;
 font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 color: #f2f2f2;
  }
+ .abc{
+  list-style-type: lower-latin;
+}
+table, tr, td {
+  border: 1px solid black;
+}
   
